ukol sedm - rozpracovano 2